# OperatingSystems

./: CMakeLists.txt  README.md
Process/: PID1.c  PID2.c  PID3.c  PID4.c  PID5.c  PID6.c  PID7.c  PID8.c  PID9.c  PIDa.c  PIDb.c  PIDc.c  PIDd.c  SinavOrnek1PID.c  SinavOrnek2PID.c  toplamaPID.c
ProcessMessages/: ProcessMSG.c  ipcMsq.c  ipcShm.c  msgQueue.c  msgQueueR.c  shmR.c  shmW.c
Threadler/: Thread1.c  ThreadHesap.c
