cmake_minimum_required(VERSION 4.0)
project(OperatingSystemsCode C)

set(CMAKE_C_STANDARD 23)

add_executable(PID1 Process/PID1.c)
add_executable(PID2 Process/PID2.c)
add_executable(PID3 Process/PID3.c)
add_executable(PID4 Process/PID4.c)
add_executable(msg_queue ProcessMessages/msgQueue.c)
add_executable(msg_queueR ProcessMessages/msgQueueR.c)
add_executable(ipcProcess ProcessMessages/ipcMsq.c)
add_executable(shmWrite ProcessMessages/shmW.c)
add_executable(PID5 Process/PID5.c)
add_executable(PID6 Process/PID6.c)
add_executable(PID7 Process/PID7.c)
add_executable(PID8 Process/PID8.c)
add_executable(toplamaPID Process/toplamaPID.c)
add_executable(PID9 Process/PID9.c)
add_executable(PIDa Process/PIDa.c)
add_executable(PIDB Process/PIDb.c)
add_executable(Thread1 Threadler/Thread1.c)
add_executable(Thesap Threadler/ThreadHesap.c)
add_executable(SinavOPID Process/SinavOrnek1PID.c)
add_executable(SinavOPID2 Process/SinavOrnek2PID.c)
add_executable(PIDc Process/PIDc.c)
add_executable(ProcessMSG ProcessMessages/ProcessMSG.c)
add_executable(shmRead ProcessMessages/shmR.c)
add_executable(PIDd Process/PIDd.c)
add_executable(ipcShareMemory ProcessMessages/ipcShm.c)
